--- a/webview/package.json
+++ b/webview/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "clipboard": "^2.0.8",
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
