--- a/tsx_version/package.json
+++ b/tsx_version/package.json
@@ -17,9 +17,14 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@emotion/babel-preset-css-prop": "^11.10.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "babel-loader": "^9.1.0",
+    "babel-plugin-twin": "^1.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.2",
     "dotenv": "^16.0.3",
@@ -30,10 +35,17 @@
     "react-router-dom": "^6.4.4",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
+    "twin.macro": "^3.0.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.2",
+    "tailwindcss": "^3.2.4"
   }
 }
