--- a/ShopInMemory/package.json
+++ b/ShopInMemory/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-twin": "^1.1.0",
     "clean-webpack-plugin": "^4.0.0",
